<resources>
    <string name="theme_label">91主题</string>
    <string name="frame_viewfacotry_data_load_text">正在很努力地很努力地加载中</string>
    <string name="frame_viewfacotry_net_slowly_text">网络不给力,先休息下,稍后再试</string>
    <string name="frame_viewfacotry_net_break_text">网络连接不成功,请检查网络是否已断开</string>
    <string name="frame_viewfacotry_net_break_btn">网络设置</string>
    <string name="frame_viewfacotry_show_netsetting_err">打开网络设置失败</string>
    <string name="searchbox_hotword_detail_info_loading_content">正在加载应用详情</string>
    <string name="searchbox_hotword_detail_info_loading_title">提示</string>
    <string name="searchbox_hotword_detail_info_network_tips">您当前网络为2G/3G,查看应用缩略图将消耗流量</string>
    <string name="searchbox_hotword_detail_info_network_tips_btn">继续查看</string>
    <string name="searchbox_hotword_detail_info_products">应用简介</string>
    <string name="searchbox_download">下　　载</string>
    <string name="searchbox_waiting">等待下载</string>
    <string name="searchbox_pause_with_progress">暂停(%d%%)</string>
    <string name="searchbox_hotword_detail_info_app_version">版本:%s</string>
    <string name="searchbox_downloading">下载中(%d%%)</string>
    <string name="searchbox_download_completed">下载完成</string>
    <string name="searchbox_canceled">已取消</string>
    <string name="searchbox_hotword_detail_info_warn_qq">QQ</string>
    <string name="searchbox_hotword_detail_info_warn_kingsoft">金山</string>
    <string name="searchbox_hotword_detail_info_warn_lbe">安全管家</string>
    <string name="searchbox_hotword_detail_info_warn_fruit">\u0020\u0020扫描结果</string>
    <string name="searchbox_hotword_detail_info_warn_pass">通过</string>
    <string name="searchbox_hotword_detail_info_warn_never_tested">未检测</string>
    <string name="searchbox_hotword_detail_info">应用详情</string>
    <string name="searchbox_hotword_detail_downnumber">下载次数:</string>
    <string name="common_button_confirm">确定</string>
    <string name="common_button_del">删除</string>
    <string name="common_button_cancel">取消</string>
    <string name="common_button_apply">应用</string>
    <string name="common_button_open">打开</string>
    <string name="common_button_use">启用</string>
    <string name="common_button_used">已启用</string>
    <string name="common_tip">提示</string>
    <string name="common_button_i_know">我知道了</string>
    <string name="common_button_install">安装</string>
    <string name="common_download_failed">下载失败</string>
    <string name="common_button_download">下载</string>
    <string name="common_install_now">立即安装</string>
    <string name="sd_clear_now">立即清理</string>
    <string name="sd_dialog_title">温馨提示</string>
    <string name="sd_sdisfull2">手机SD卡内存不足，可能无法下载使用，去清理一下吧！清理完成后将恢复下载。</string>
    <string name="get_coin_free">免费得猫爪</string>
    <string name="launcher_edit_individal">个性化</string>
    <string name="user_feedback_content_none">反馈内容不能为空</string>
    <string name="theme_shop_no_download_title">能不能告诉我 你喜欢什么嘛！</string>
    <string name="theme_shop_no_download_message">你都没有下载资源！</string>
    <string name="btn_theme_upgrade">升级</string>
    <string name="upgrade_theme">主题升级提示</string>
    <string name="upgrade_theme_msg">《%1$s》可升级，更新内容：\n</string>
    <string name="btn_theme_upgrade_now">马上升级</string>
    <string name="profile_paihang">排行</string>
    <string name="profile_fenlei">分类</string>
    <string name="profile_zhuanji">专辑</string>
    <string name="profile_hunda">混搭</string>
    <string name="profile_bendi">本地</string>
    <string name="profile_owner">个人中心</string>
	<string name="diy">美图</string>
	<string name="comic">天天漫画</string>
	<string name="paster">桌面贴纸</string>
	<string name="plugin_theme_diy">主题DIY</string>
	<string name="author">作者： </string>
    <string name="zp_not_find_tip">未能找到图片</string>
    <string name="zp_save_tip">图片已保存到图库</string>
    <string name="zp_exist_tip">图片已存在图库中</string>
    <string name="save_zp_title">保存图片</string>
    <string name="create_zp_title">我来创作</string>
    <string name="custom_theme_series">制作天天主题</string>
    <string name="save_and_apply">生成天天主题</string>
    <string name="interval_time">切换间隔</string>
    <string name="edit_error_tip1">请先退出编辑模式</string>
    <string name="edit_error_tip2">请输入主题名称</string>
    <string name="edit_error_tip3">请选择时间间隔</string>
    <string name="edit_error_tip4">至少需要两个主题,请选择主题</string>
    <string name="delete_confirm">确定删除</string>
    <string name="create_series_theme_tip">制作自定义主题系列至少需要两个普通主题!</string>
    <string name="custom_theme_series_drag_hint">长按拖动可更改排序</string>
	<string name="custom_theme_series_name">主题名称</string>
	<string name="custom_theme_series_interval">切换间隔</string>
	<string name="custom_theme_series_recommend_hint">推荐到91桌面，将有机会展示在个性化首页“大家天天荐”栏目</string>
	<string name="custom_theme_series_generating">天天主题生成中...</string>
	<string name="custom_theme_series_recommend_success">天天主题推荐成功！</string>
	<string name="custom_theme_series_recommend_fail">天天主题推荐失败！</string>
	<string name="custom_theme_series_name_hint">主题名称</string>
	<string name="custom_theme_series_desc_hint">主题描述</string>
	<string name="custom_theme_series_desc_default">#天天主题# 每天不一样的好心情！</string>
	<string name="custom_theme_series_tag_hint">主题标签，多个标签以分号区隔</string>
	<string name="custom_theme_series_interval_hint">自动切换时间：</string>
	<string name="custom_theme_series_interval_three_hour">约3小时</string>
	<string name="custom_theme_series_interval_six_hour">约6小时</string>
	<string name="custom_theme_series_interval_one_day">1天</string>
	<string name="custom_theme_series_interval_two_day">2天</string>
	<string name="custom_theme_series_interval_one_week">1周</string>
	<string name="custom_theme_series_select_confirm">选好了</string>
	<string name="custom_theme_series_select_hint">请选择至少2个主题</string>
    <string name="redpacket_award_title">恭喜你获得1个红包</string>
    <string name="redpacket_award_subhead">明天可能还会有哦！</string>
    <string name="redpacket_award_tips">红包已放账户中，请在【我的】页面查看</string>
    <string name="redpacket_award_theme_coupon_tips">主题券可用于购买付费主题</string>
    <string name="redpacket_award_theme_coupon">主题券</string>
    <string name="redpacket_award_maozhua_coupon">猫爪券</string>
    <string name="redpacket_award_theme_coupon_pieces">剩余</string>
    <string name="redpacket_award_theme_coupon_count">·\u0020%s张</string>
    <string name="redpacket_award_theme_coupon_use_explain">·\u0020可兑换任意一款收费主题</string>
    <string name="redpacket_award_maozhua_coupon_use_explain">·\u0020可在购买主题时抵扣相应猫爪</string>
    <string name="redpacket_award_theme_coupon_use_explain1">·\u0020限当前账号使用</string>
    <string name="redpacket_award_theme_coupon_deadline">%s过期</string>
    <string name="redpacket_my_redpacket_title">我的红包</string>
    <string name="redpacket_my_redpacket_history_title">历史红包</string>
    <string name="redpacket_my_redpacket_title_tab_theme_redpage">红包</string>
    <string name="redpacket_my_redpacket_title_tab_maozhua_redpage">猫爪券</string>
    <string name="redpacket_my_redpacket_title_tab_available">可用红包</string>
    <string name="redpacket_my_redpacket_title_tab_available_header1">有</string>
    <string name="redpacket_my_redpacket_title_tab_available_header2">个红包即将过期</string>
    <string name="redpacket_my_redpacket_title_tab_available_header3">红包说明</string>
    <string name="redpacket_my_redpacket_title_tab_history">查看已过期红包</string>
    <string name="redpacket_my_redpacket_tips">神马都没有，升级会员拿更多红包哦~</string>
    <string name="redpacket_my_redpacket_convert">兑换红包</string>
    <string name="redpacket_my_redpacket_convert_edittext_tips">请输入兑换码</string>
    <string name="redpacket_my_redpacket_convert_btn_tips">兑换</string>
    <string name="redpacket_my_redpacket_convert_tips1">请输入正确的兑换码！</string>
    <string name="redpacket_my_redpacket_convert_tips2">兑换失败，请重试！</string>
    <string name="redpacket_my_redpacket_convert_tips3">兑换码不正确！</string>
    <string name="redpacket_my_redpacket_convert_tips4">兑换码已经被使用！</string>
    <string name="feed_collect_failed_tip">操作失败，请稍后再试</string>
    <string name="feed_report_success_tip">举报成功</string>
    <string name="duiba_enter_loading">正在跳转到积分商城...</string>
    <string name="duiba_jump_login_title">跳转登录</string>
    <string name="duiba_jump_login_message">跳转到登录页面？</string>
    <string name="duiba_copycode_title">复制券码</string>
    <string name="duiba_copycode_message">券码为：</string>
    <string name="feed_pic_num">%s张图片</string>
    <string name="feed_follow_num">%s关注</string>
    <string name="feed_follow_tag_num">%s关注标签</string>
    <string name="image_loading_tip">图片正在加载中..</string>
    <string name="desc_shrinkup">收起</string>
    <string name="desc_spread">显示更多</string>
    <string name="show_all_text">展示全文</string>
    <string name="collapse_text">收起</string>
    <string name="feed_audit_desc">审核结果:%s</string>
    <string name="sizeLimitSeven">最多显示前7套主题</string>
    <string name="account_login">登录</string>
    <string name="shop_theme_v7_hourtheme_hot">1小时人气主题</string>
    <string name="shop_theme_v7_hourtheme_download">正在下载</string>
    <string name="shop_theme_v7_recommend_series">天天主题</string>
    <string name="shop_theme_v8_guess_you_like_theme">猜你喜欢的主题</string>
    <string name="shop_theme_v8_guess_you_like_wallpaper">猜你喜欢的壁纸</string>
    <string name="shop_theme_v8_member_recommend">会员优选</string>
    <string name="shop_theme_v8_editor_recommend">编辑精选</string>
    <string name="shop_theme_v8_more_entrance">看看其他美化资源</string>
    <string name="shop_theme_v8_choose_style">选择你的风格</string>
    <string name="shop_theme_v8_video_wallpaper">视频壁纸</string>
    <string name="theme_shop_v6_guide_set_launcher_banner_view_strategy">如何免费下载付费主题?</string>
    <string name="theme_shop_v6_guide_set_launcher_activity_btn_text1">设置默认桌面</string>
    <string name="theme_shop_v6_guide_set_launcher_activity_btn_text2">登录领券</string>
    <string name="theme_shop_v6_guide_set_launcher_activity_btn_text3">已领券</string>
    <string name="theme_shop_v6_guide_set_launcher_activity_btn_text4">领券</string>
    <string name="theme_shop_v6_guide_set_launcher_activity_tips1"><![CDATA[亲，你还没有把91桌面设置为默认桌面噢~设置91桌面为默认桌面每次点击HOME键就可以回到91桌面啦~现在设置还能额外获得<font color="#E7364E">100主题券</font>与<font color="#E7364E">50积分</font>的奖励哦]]></string>
	<string name="theme_shop_v6_guide_set_launcher_activity_tips2">主题券请在个人中心-红包内查看</string>
	<string name="theme_shop_v6_guide_set_launcher_activity_final">设置默认桌面失败，请重试!</string>
	<string name="theme_shop_v6_guide_set_launcher_login_award_activity_text"><![CDATA[登录91桌面账号就能领取<font color="#E7364E">100主题券</font>与<font color="#E7364E">50积分</font>的奖励啦~！]]></string>
	<string name="theme_shop_v6_guide_set_launcher_login_award_final">领券失败，请重试!</string>
    <string name="x5_launcher_action">#x5_launcher_action#</string>
</resources>