<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="#ffffe14c">
	<ImageView 
	    android:layout_width="match_parent"
    	android:layout_height="wrap_content"/>
	    <!--android:background="@drawable/theme_shop_v6_guide_set_launcher_activity_top_bg"-->
	<ImageView 
	    android:id="@+id/bacn_btn"
	    android:layout_width="wrap_content"
    	android:layout_height="wrap_content"
    	android:padding="15dp"
	    android:src="@drawable/common_header_back_normal"/>
    <RelativeLayout 
        android:layout_width="match_parent"
    	android:layout_height="match_parent"
    	android:layout_marginTop="189dp"
        android:orientation="vertical">
		<!--android:background="@drawable/theme_shop_v6_guide_set_launcher_activity_content_bg"-->
        <!-- 设置默认桌面引导 -->
        <LinearLayout 
            android:id="@+id/guide_set_launcher_layout"
            android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_marginTop="35dp"
    		android:layout_marginBottom="15dp"
    		android:layout_marginLeft="35dp"
    		android:layout_marginRight="35dp"
    		android:gravity="center_horizontal"
    		android:layout_above="@+id/theme_shop_v6_guide_set_launcher_activity_btn"
    		android:orientation="vertical">
           <TextView 
                android:id="@+id/guide_set_launcher_text"
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:gravity="center"
	            android:textSize="12sp"
	            android:textColor="#ff012641"
	            android:text="@string/theme_shop_v6_guide_set_launcher_activity_tips1"/>
            <ImageView 
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
                <!--android:src="@drawable/theme_shop_v6_guide_set_launcher_activity_setting_bg"-->
        </LinearLayout>
        <!-- 完成任务引导 -->
        <LinearLayout
            android:id="@+id/guide_set_launcher_success_layout"
            android:layout_width="match_parent"
    		android:layout_height="match_parent"
    		android:layout_marginTop="35dp"
    		android:layout_marginBottom="15dp"
    		android:layout_marginLeft="35dp"
    		android:layout_marginRight="35dp"
    		android:gravity="center_horizontal"
    		android:layout_above="@+id/theme_shop_v6_guide_set_launcher_activity_btn"
    		android:orientation="vertical"
    		android:visibility="gone">
           <TextView 
	            android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginBottom="15dp"
				android:gravity="center"
	            android:textSize="12sp"
	            android:textColor="#ff012641"
	            android:text="@string/theme_shop_v6_guide_set_launcher_activity_tips2"/>
            <ImageView 
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"/>
                <!--android:src="@drawable/theme_shop_v6_guide_set_launcher_activity_setted_bg"-->
        </LinearLayout>
        <RelativeLayout 
            android:id="@+id/theme_shop_v6_guide_set_launcher_activity_btn"
            android:layout_width="189dp"
    		android:layout_height="47dp"
    		android:layout_marginBottom="40dp"
    		android:layout_alignParentBottom="true"
    		android:layout_centerHorizontal="true"
            android:background="@drawable/theme_shop_v6_guide_set_launcher_activity_btn">
            <TextView
                android:id="@+id/theme_shop_v6_guide_set_launcher_activity_btn_text" 
                android:layout_width="wrap_content"
    			android:layout_height="wrap_content"
    			android:layout_centerInParent="true"
    			android:paddingBottom="5dp"
                android:textSize="18sp"
                android:textColor="@color/white"
                android:text="@string/theme_shop_v6_guide_set_launcher_activity_btn_text1"/>
            <ImageView
                android:id="@+id/theme_shop_v6_guide_set_launcher_activity_btn_arrow"  
                android:layout_width="wrap_content"
				android:layout_height="wrap_content"
				android:layout_marginTop="5dp"
				android:layout_marginLeft="10dp"
				android:layout_centerVertical="true"
                android:src="@drawable/theme_shop_v6_guide_set_launcher_activity_btn_arrow"
                android:layout_toRightOf="@+id/theme_shop_v6_guide_set_launcher_activity_btn_text"
                android:layout_alignTop="@+id/theme_shop_v6_guide_set_launcher_activity_btn_text"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
